universal: ZipFile-based nested extraction + per-jar entry diagnostics
DIAG 1fb73f8: vma lives in org.lwjgl.util.vma; natives jars yielded zero
entries via JarInputStream while Java-class jars parsed fine.  Read the
nested jars through ZipFile (via temp file) and log inner entry counts
and first names per jar so the next DIAG (if any) shows the real layout.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>